# chrono-slots

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: example.rs
src/: finder.rs  lib.rs  periods.rs
src/finder/: find.rs
src/periods/: block.rs  period.rs  slot.rs  span.rs
